--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -1,10 +1,15 @@
-<h1>La POO c'est nul alors ?</h1>
+<h1>La POO c'est nul ?</h1>
 
 <ul>
-  <li>la POO à été un grand progrès dans la façon de coder</li>
-  <li>elle permet de mieux imaginer les concepts, mieux les séparer</li>
-  <li>mais peut amener des effets de bord</li>
-  <li>par exemple: un attribut par uné méthode, alors qu'on ne l'avait pas prévu</li>
-  <li>en programmation fonctionnelle, on essaie d'éviter les changements d'état sur un objet donné, pour limiter ces effets de bords</li>
+  <li>un grand progrès dans la façon de coder</li>
+  <li>permet de mieux imaginer les concepts, mieux les séparer</li>
+</ul>
+
+mais
+
+<ul>
+  <li>peut amener des effets de bord, par exemple</li>
+  <li>une méthode modifie un attribut, mais ne l'avait pas prévu</li>
+  <li>en prog. ƒ<sup>elle</sup> on évite les changements d'état pour limiter ces effets de bords</li>
   <li>un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
 </ul>
