added mdn and caniuse links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul>
             <li>Malgré les syntaxes évoluées des specs modernes...</li>
             <li>On utilisera ici ECMA5 / JS 1.8</li>
-            <li>Vérifiez la compatibilité sur MDN ou caniuse.com !</li>
+            <li>Vérifiez la compatibilité sur <a href="http://developer.mozilla.org">MDN</a> ou <a href="http://caniuse.com">caniuse.com</a> !</li>
           </ul>
         </section>
 
