added a rationale slide

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
           </ul>
         </section>
 
+	    <section>
+          <h1>À quoi ça sert?</h1>
+          <ul>
+            <li>Plus robuste</li>
+            <li>Plus maintenable</li>
+            <li>Plus modulaire</li>
+            <li>Moins de bugs</li>
+          </ul>
+	    </section>
+
         <!-- Parti pris -->
         <section>
           <h1>Warning</h1>
