added some notes

--- a/slides/comparaison.html
+++ b/slides/comparaison.html
@@ -1,5 +1,7 @@
 <h1>Concrètement</h1>
-
+<aside class="notes">
+Paradigme différent de l'impératif et de la POO
+</aside>
 <pre><code class="javascript" data-trim data-noescape>
 var notes = [ 'do', 'ré', 'mi', 'fa' ];
 </code></pre>
