--- a/slides/map2.html
+++ b/slides/map2.html
@@ -9,9 +9,7 @@ Applique une fonction à chaque élément, et<br> retourne <b>les résultats</b>
 <pre><code class="javascript" data-trim data-noescape>
 var partition = [ 42, 24, 91, 14, 27, 34 ];
 
-partition.map(function (note) {
-  return octave(note)
-})
+partition.map(octave)
 
 // [ 50, 32, 99, 22, 35, 42 ]
 </code></pre>
