--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
           <div class="clearfix">
             <img class="speaker-pic" src="css/alain.jpg">
-            <h2>Alain Wagner</h2>
+            <h2>Alain Vagner</h2>
             <span>In Pastafari we trust</span>
           </div>
           <br><br>
