--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -8,7 +8,7 @@
 mais
 
 <ul>
-  <li>peut amener des effets de bord, par exemple</li>
+    <li>peut amener des <strong>effets de bord</strong>, par exemple</li>
   <li>une méthode modifie un attribut, mais ne l'avait pas prévu</li>
   <li>en prog. ƒ<sup>elle</sup> on évite les changements d'état pour limiter ces effets de bords</li>
   <li>un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
