added some slides

--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
             <h1>Ecosystème</h1>
           </section>
           <section data-external="slides/lodash.html"></section>
+          <section data-external="slides/immutable.html"></section>
           <section data-external="slides/async.html"></section>
+          <section data-external="slides/react.html"></section>
         </section>
 
         <!-- Bye -->
