--- a/slides/lodash.html
+++ b/slides/lodash.html
@@ -13,3 +13,13 @@
   <li><code>_.property( path )</code></li>
   <li><code>_.fromPairs( array )</code></li>
 </ul>
+<br /><br />
+<ul>
+    <li>Une version plus fonctionnelle de lodash: <a href="https://github.com/lodash/lodash/wiki/FP-Guide">lodash/fp</a></li>
+    <li>Une bonne alternative: <a href="">Ramda</a></li>
+</ul>
+<aside class="notes">
+lodash: mentionner rapidement underscore, lodash a démarré comme un fork puis entierement réécrit, avec plus de fonctionnalités... définitivement à préférer à underscore
+lodash/fp: des méthodes immutables, auto-curriées, fonction en premier, donnée en dernier
+Ramda: même principe, auto-currying, composition, ...
+</aside>
