--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/async.html"></section>
           <section data-external="slides/react.html"></section>
+          <section data-external="slides/fpjslibs.html"></section>
         </section>
 
         <!-- Bye -->
