--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
           <section>
             <h1>Composition</h1>
           </section>
+          <section data-external="slides/composition"></section>
         </section>
 
         <!-- Ecosystème -->
         <section>
           <section>
             <h1>Ecosystème</h1>
-          </section>
+            </section>
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/async.html"></section>
