--- a/slides/react.html
+++ b/slides/react.html
@@ -4,4 +4,6 @@
 expliquer le lien avec le paradigme fonctionnel
 
 pure components, immutable states in the flux architecture, interest of the flux architecture, ...
+
+faut-il aussi mentionner bacon.js?
 -->
