--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <section>
           <h1>À quoi ça sert?</h1>
           <ul>
-            <li>Plus robuste</li>
+            <li>Moins d'effets de bords</li>
             <li>Plus maintenable</li>
             <li>Plus modulaire</li>
-            <li>Moins de bugs</li>
+            <li>Plus robuste</li>
           </ul>
         </section>
 
@@ -128,7 +128,7 @@
         <!-- Effets de bord -->
         <section>
           <section>
-            <h1>Effets de bord / fonctions pures</h1>
+            <h1>Fonctions pures / Effets de bord</h1>
           </section>
           <section data-external="slides/poocnul.html"></section>
 
@@ -141,6 +141,14 @@
 
           <section data-external="slides/ex_fonctionimpure.html"></section>
           <section data-external="slides/ex_fonctionpure.html"></section>
+
+          <section>
+            <h1>Pour quoi faire ?</h1>
+            <blockquote>
+              En gardant des fonctions pures, on évite les mutations, et donc les effets de bords.
+            </blockquote>
+            <section data-external="slides/ex_mutations.html"></section>
+          </section>
 
           <section>
             <h1>La POO et la prog. fonctionnelle sont incompatibles ?</h1>
