some notes + midi slide

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <!-- Hello -->
         <section>
             <h1>say('Hello world')</h1>
+            <aside class="notes">
+              Bonjour !
+              <br>
+              Bienvenue, et merci de venir assister à cette présentation de la programmation fonctionnelle en Javascript.
+            </aside>
         </section>
 
         <!-- Authors -->
@@ -48,6 +53,11 @@
             <h2>Vincent Lark</h2>
             <span>In Pastafari we trust</span>
           </div>
+          <aside class="notes">
+            Tout d'abord, une rapide présentation.
+            <br>
+            Nous sommes Alain et Vincent, nous travaillons chacun sur des projets Web dans la région Nord Est depuis une dizaine d'années.
+          </aside>
         </section>
 
         <!-- Introduction -->
@@ -58,16 +68,13 @@
             <li>Concepts basiques et exemples concrets<br><br></li>
             <li>Posez vos questions pendant l'atelier !</li>
           </ul>
-        </section>
-
-        <section>
-          <h1>À quoi ça sert?</h1>
-          <ul>
-            <li>Moins d'effets de bords</li>
-            <li>Plus maintenable</li>
-            <li>Plus modulaire</li>
-            <li>Plus robuste</li>
-          </ul>
+          <aside class="notes">
+            Nous vous proposons donc vous faire découvrir la prog. fonctionnelle en JS,
+            <br>
+            en tout cas ses concepts les plus simples, par des ex. concrets et amusants
+            <br>
+            N'hésitez surtout pas à poser vos questions ! si qlq chose n'est pas clair, on y répond direct.
+          </aside>
         </section>
 
         <!-- Parti pris -->
@@ -88,6 +95,21 @@
           </blockquote>
         </section>
 
+        <section>
+          <h1>À quoi ça sert?</h1>
+          <ul>
+            <li>Moins d'effets de bords</li>
+            <li>Plus maintenable</li>
+            <li>Plus modulaire</li>
+            <li>Plus robuste</li>
+          </ul>
+          <aside class="notes">
+            Pourquoi des gens se sont tournés vers la prog. fonctionll ?
+            <br>
+            ...
+          </aside>
+        </section>
+
         <!-- Comparaison -->
         <section data-external="slides/comparaison.html"></section>
 
@@ -97,6 +119,9 @@
             <h1>Getting started</h1>
           </section>
           <section data-external="slides/exercices/ex1.html"></section>
+          <section data-external="slides/midi.html"></section>
+          <aside class="notes">
+          </aside>
         </section>
 
         <!-- Fil rouge -->
@@ -105,8 +130,10 @@
             <h1>Functions as first class citizen</h1>
             <h4>Fonction d'ordre supérieur</h4>
             <blockquote>
-              Dans un langage traitant les fonctions comme des "citoyens de 1ère classe",
-              les fonctions peuvent être passées en paramètre (et en retour) d'autres fonctions.
+              Dans un langage traitant les fonctions comme des<br>
+              "citoyens de 1ère classe",<br>
+              les fonctions peuvent être passées en paramètre<br>
+              et/ou en retour d'autres fonctions.
             </blockquote>
           </section>
           <section data-external="slides/function_as_argument.html"></section>
@@ -161,7 +188,7 @@
           <section>
             <h1>Composition</h1>
           </section>
-          <section data-external="slides/composition"></section>
+          <section data-external="slides/composition.html"></section>
         </section>
 
         <!-- Ecosystème -->
