--- a/slides/comparaison.html
+++ b/slides/comparaison.html
@@ -1,7 +1,5 @@
 <h1>Concrètement</h1>
-<aside class="notes">
-Paradigme différent de l'impératif et de la POO
-</aside>
+
 <pre><code class="javascript" data-trim data-noescape>
 var notes = [ 'do', 'ré', 'mi', 'fa' ];
 </code></pre>
@@ -16,3 +14,13 @@ notes.forEach(function(note){
   console.log(note);
 })
 </code></pre>
+
+<aside class="notes">
+  Voici un exemple très simple
+  <br>
+  Paradigme différent de l'impératif et de la POO
+  <br>
+  L'idée de base: "l'intérieur de cette boucle, autant le séparer dans une fonction dédiée"
+  puisque la fonction est de fait, le conteneur le plus logique pour un traitement spécifique.<br>
+  <small>cf. <a href="https://fr.wikipedia.org/wiki/SOLID_(informatique)">SOLID</a>, en partic. <a href="https://fr.wikipedia.org/wiki/Principe_de_responsabilit%C3%A9_unique">Principe de responsabilité unique</a></small>
+</aside>
