--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -8,7 +8,13 @@ Ouvrez <span class="exo_url"></span>/ex1.html
 
 <pre class="fragment"><code class="javascript" data-trim data-noescape>
 simpleTrack().forEach(function (event) {
-  console.log(event)
-  debugger;
+  console.log(event);
+  // debugger;
 })
 </code></pre>
+
+<aside class="notes">
+  Le moment est  venu de vous dévoiler ce qu'on vous a préparé.
+  <br>
+  On va essayer de travailler de manière fonctionelle sur des morceaux MIDI
+</aside>
