--- a/index.html
+++ b/index.html
@@ -82,9 +82,17 @@
           <h1>Warning</h1>
           <ul>
             <li>Malgré les syntaxes évoluées des specs modernes...</li>
-            <li>On utilisera ici ECMA5 / JS 1.8</li>
+            <li>On utilisera ici ES5 / JS 1.8</li>
             <li>Vérifiez la compatibilité sur <a href="http://developer.mozilla.org">MDN</a> ou <a href="http://caniuse.com">caniuse.com</a> !</li>
           </ul>
+          <aside class="notes">
+            SONDAGE !<br>
+            qui utilise le JS de près ou de loin ?<br>
+            qui utilise le JS surtout via jQuery ?<br>
+            qui utilise le JS de façon intensive, avec du Node ?<br>
+            Un petit warning avant de commencer cette prez.. malgré les nouvelles syntaxes et autre joyeusetés qu'apporte ES6 et suivants, nous on utilisera aujourd'hui le simple EcmaScript 5<br>
+            Le but est surtout de ne pas ajouter de barrière à la compréhension, que tout le monde puisse tester, etc..
+          </aside>
         </section>
 
         <!-- Définition -->
@@ -104,9 +112,13 @@
             <li>Plus robuste</li>
           </ul>
           <aside class="notes">
-            Pourquoi des gens se sont tournés vers la prog. fonctionll ?
+            Pourquoi des gens se sont tournés vers la prog. fonctionelle ?
             <br>
-            ...
+            Nous irons plus en profondeur par la suite, mais on peut déjà dire que les buts sont d'abord<br>
+            - de réduire les effets de bords<br>
+            - de rendre le code plus maintenable<br>
+            - plus modulaire<br>
+            - plus robuste<br>
           </aside>
         </section>
 
@@ -117,11 +129,14 @@
         <section>
           <section>
             <h1>Getting started</h1>
+            <aside class="notes">
+              Avant d'aller plus loin, je vous propose d'ouvrir le support d'atelier que l'on vous a fourni.<br>
+              Si vous ne l'avez pas, demandez-le nous, on vous le donnera sur clé USB, c'est rapide à mettre en place.<br>
+            </aside>
           </section>
+          <section data-external="slides/exercices/_start.html"></section>
           <section data-external="slides/exercices/ex1.html"></section>
           <section data-external="slides/midi.html"></section>
-          <aside class="notes">
-          </aside>
         </section>
 
         <!-- Fil rouge -->
