--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -6,7 +6,7 @@ Ouvrez <span class="exo_url"></span>/ex1.html
 
 <br>
 
-<pre class="fragment"><code class="javascript" data-trim data-noescape>
+<pre><code class="javascript" data-trim data-noescape>
 simpleTrack().forEach(function (event) {
   console.log(event);
   // debugger;
@@ -14,7 +14,11 @@ simpleTrack().forEach(function (event) {
 </code></pre>
 
 <aside class="notes">
-  Le moment est  venu de vous dévoiler ce qu'on vous a préparé.
-  <br>
+  Tout le monde a un environement fonctionnel ?<br>
+  Sinon appelez à l'aide, on vous aide pour qu'on puisse tous commencer ensemble.<br>
+  Alors le moment est  venu de vous dévoiler ce qu'on vous a préparé...<br>
+  essayez donc le petit bout de code qu'on affiche là...<br>
+  Si tout se passe bien, vous devriez avoir une ribambelle de chose dans la console.<br>
+  Cette longue liste d'éléments, c'est en fait une partition MIDI<br>
   On va essayer de travailler de manière fonctionelle sur des morceaux MIDI
 </aside>
