--- a/slides/exercices/_start.html
+++ b/slides/exercices/_start.html
@@ -1,17 +1,7 @@
 <h1>Exercice 1</h1>
 
-<blockquote>
-Ouvrez <span class="exo_url"></span>/ex1.html
-</blockquote>
 
-<br>
-
-<pre><code class="javascript" data-trim data-noescape>
-simpleTrack().forEach(function (event) {
-  console.log(event);
-  // debugger;
-})
-</code></pre>
+<img class="sshot" src="./slides/images/electron.png" alt="screenshot" />
 
 <aside class="notes">
   Donc vous devriez avoir devant vous quelque chose qui ressemble à ça.<br>
