--- a/slides/ex_fonctionimpure.html
+++ b/slides/ex_fonctionimpure.html
@@ -8,3 +8,10 @@ function addNote(note) {
   return partition;
 }
 </code></pre>
+
+<h4 class="fragment"><br>NON: elle modifie une variable externe</h4>
+
+<aside class="notes">
+  Cette fonction est impure car elle modifie la variable externe partition<br>
+  On dit qu'elle effectue une mutation sur la variable partition
+</aside>
