--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -1,7 +1,7 @@
 <h1>Exercice 1</h1>
 
 <blockquote>
-Ouvrez <span class="exo_url"></span>/ex1.html
+Ouvrez l'exercice "Getting started"
 </blockquote>
 
 <br>
