--- a/slides/filter.html
+++ b/slides/filter.html
@@ -15,3 +15,7 @@ partition.filter(function (note){
 
 // [ 24, 14, 27 ]
 </code></pre>
+
+<aside class="notes">
+  Utile pour ne retenir que certains éléments d'une liste
+</aside>
