--- a/slides/map.html
+++ b/slides/map.html
@@ -15,3 +15,8 @@ partition.map(function (note) {
 
 // [ 50, 32, 99, 22, 35, 42 ]
 </code></pre>
+
+<aside class="notes">
+  Utile pour transformer une liste<br>
+  Ou appliquer un même process avec plusieurs valeurs de départ
+</aside>
