--- a/slides/mixpoofonctionelle.html
+++ b/slides/mixpoofonctionelle.html
@@ -1,8 +1,14 @@
-Non ! Rien n'empêche, en Javascript, de mixer les deux concepts.
-<br>
-<br>
+<h3>Non ! Rien n'empêche d'utiliser les deux concepts.</h3>
 <ul>
   <li>on peut réutiliser du code déjà existant</li>
-  <li>on peut préférer la POO pour certains concepts</li>
+  <li>on peut préférer la POO pour certains aspects</li>
   <li>au final, plus un choix subjectif qu'une règle d'or</li>
 </ul>
+
+<aside class="notes">
+  Rien n'empêche de mixer les deux concepts au sein d'un projet<br>
+  On utilise souvent bcp de petits modules, chacun leur spécificité<br>
+  La POO peut être plus utile dans certains cas (notion d'héritage, etc..)<br>
+  Attention: dans une codebase fonctionnelle, éviter d'introduire de la POO accessible<br>
+  Principe de moindre surprise
+</aside>
