--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -1,15 +1,13 @@
 <h1>La POO c'est nul ?</h1>
 
 <ul>
-  <li>un grand progrès dans la façon de coder</li>
-  <li>permet de mieux imaginer les concepts, mieux les séparer</li>
-</ul>
-
-mais
-
-<ul>
-    <li>peut amener des <strong>effets de bord</strong>, par exemple</li>
-  <li>une méthode modifie un attribut, mais ne l'avait pas prévu</li>
-  <li>en prog. ƒ<sup>elle</sup> on évite les changements d'état pour limiter ces effets de bords</li>
+  <li>un progrès dans la façon de coder</li>
+  <li>permet de séparer les responsabilités</li>
+  
+  <li style="list-style-type: none; text-align: center; margin: 15px 0;">mais</li>
+  
+  <li>peut amener des <strong>effets de bord</strong></li>
+  <li>méthode qui modifie un attribut, pas prévu par l'appelant</li>
+  <li>en prog ƒ<sup>elle</sup> on évite les changements d'état pour limiter ces effets de bords</li>
   <li>un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
 </ul>
