--- a/index.html
+++ b/index.html
@@ -189,29 +189,39 @@
         <section>
           <section>
             <h1>Collections</h1>
+            <aside class="notes">
+              Utilisation la plus courante du style fonctionel: les listes ou collections<br>
+              Souvent besoin du concept d'itération, sous différentes formes<br>
+              Quelques exemples les plus utiles
+            </aside>
           </section>
           <section data-external="slides/filter.html"></section>
           <section data-external="slides/find.html"></section>
           <section data-external="slides/map.html"></section>
           <section data-external="slides/map2.html"></section>
           <section data-external="slides/reduce.html"></section>
+          <section data-external="slides/reduce2.html"></section>
         </section>
 
         <!-- Effets de bord -->
         <section>
           <section>
-            <h1>Fonctions pures / Effets de bord</h1>
+            <h1>Fonctions pures<br><small>&amp;</small><br>Effets de bord</h1>
           </section>
           <section data-external="slides/poocnul.html"></section>
 
           <section>
             <h1>Fonctions pures</h1>
             <blockquote>
-              Une fonction pure est une fonction qui n'utilise que ses paramètres et ses variables locales.
+              Une fonction pure est une fonction déterministe sans changements d'état.
+            </blockquote>
+            <blockquote>
+              Elle n'utilise que ses paramètres et ses variables locales.
             </blockquote>
           </section>
 
           <section data-external="slides/ex_fonctionimpure.html"></section>
+          <section data-external="slides/ex_fonctionimpure2.html"></section>
           <section data-external="slides/ex_fonctionpure.html"></section>
 
           <section>
@@ -236,11 +246,21 @@
           <section data-external="slides/composition.html"></section>
         </section>
 
+        <!-- Les amis - ->
+        <section>
+          <section>
+            <h1>Les amis</h1>
+          </section>
+          <section data-external="slides/asynchonism.html"></section>
+          <section data-external="slides/promises.html"></section>
+        </section>
+        <!-- -->
+
         <!-- Ecosystème -->
         <section>
           <section>
             <h1>Ecosystème</h1>
-            </section>
+          </section>
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/async.html"></section>
