--- a/slides/find.html
+++ b/slides/find.html
@@ -15,3 +15,8 @@ partition.find(function (note){
 
 // 24
 </code></pre>
+
+<aside class="notes">
+  Utile pour ne retenir que chercher un élément particulier<br>
+  Ou savoir si  "au moins 1 élément vérifie une condition"
+</aside>
