--- a/slides/map2.html
+++ b/slides/map2.html
@@ -7,9 +7,16 @@ Applique une fonction à chaque élément, et<br> retourne <b>les résultats</b>
 <br>
 
 <pre><code class="javascript" data-trim data-noescape>
-var partition = [ 42, 24, 91, 14, 27, 34 ];
+var auteurs = [ 'Tchaikovsky', 'Mozart', 'Bach' ];
 
-partition.map(octave)
+function biographie (auteur) {
+  return wikipedia.search('classical ' + auteur);
+}
 
-// [ 50, 32, 99, 22, 35, 42 ]
+var bios = auteurs.map(biographie)
 </code></pre>
+
+<aside class="notes">
+  Utile pour transformer une liste<br>
+  Ou appliquer un même process avec plusieurs valeurs de départ
+</aside>
