--- a/index.html
+++ b/index.html
@@ -240,12 +240,24 @@
         <section>
           <section>
             <h1>Ecosystème</h1>
-            </section>
+          </section>
+          <section>
+              <h1>Les "amis"</h1>
+          </section>
+          <section data-external="slides/react.html"></section>
+          <section data-external="slides/async.html"></section>
+          <section data-external="slides/promises.html"></section>
+          <section data-external="slides/streams.html"></section>
+          <section>
+            <h1>Les libs</h1>
+          </section>  
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
-          <section data-external="slides/async.html"></section>
-          <section data-external="slides/react.html"></section>
           <section data-external="slides/fpjslibs.html"></section>
+          <section>
+            <h1>Le futur</h1>
+          </section>
+          <section data-external="slides/es6-7.html"></section>
         </section>
 
         <!-- Bye -->
