added twitter handles

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <section>
           <div class="clearfix">
             <img class="speaker-pic" src="css/alain.jpg">
-            <h2>Alain Vagner</h2>
+            <h2>Alain Vagner - @biou</h2>
             <span>fan de procrastination fonctionnelle</span>
           </div>
           <br><br>
           <div class="clearfix">
             <img class="speaker-pic" src="css/vincent.jpg">
-            <h2>Vincent Lark</h2>
+            <h2>Vincent Lark - @allyouneedisgnu</h2>
             <span>In Pastafari we trust</span>
           </div>
           <aside class="notes">
@@ -261,7 +261,6 @@
           <section>
             <h1>Ecosystème</h1>
           </section>
-<<<<<<< HEAD
           <section>
               <h1>Les "amis"</h1>
           </section>
@@ -272,8 +271,6 @@
           <section>
             <h1>Les libs</h1>
           </section>  
-=======
->>>>>>> 7acc17453fb09247e0450e24159ca9050e841faa
           <section data-external="slides/lodash.html"></section>
           <section data-external="slides/immutable.html"></section>
           <section data-external="slides/fpjslibs.html"></section>
