--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
         <section>
           <h1>Questions<h1>
         </section>
+        <section data-external="slides/biblio.html"></section>
       </div>
     </div>
 
