--- a/slides/map2.html
+++ b/slides/map2.html
@@ -20,3 +20,9 @@ var bios = auteurs.map(biographie)
   Utile pour transformer une liste<br>
   Ou appliquer un même process avec plusieurs valeurs de départ
 </aside>
+
+<!--
+
+est-ce qu'on peut en profiter pour parler de flatMap?
+
+-->
