added flatMap to collections

--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
           <section data-external="slides/map2.html"></section>
           <section data-external="slides/reduce.html"></section>
           <section data-external="slides/reduce2.html"></section>
+          <section data-external="slides/flatmap.html"></section>
+          <section data-external="slides/flatmap2.html"></section>
         </section>
 
         <!-- Effets de bord -->
