--- a/slides/comparaison.html
+++ b/slides/comparaison.html
@@ -24,3 +24,9 @@ notes.forEach(function(note){
   puisque la fonction est de fait, le conteneur le plus logique pour un traitement spécifique.<br>
   <small>cf. <a href="https://fr.wikipedia.org/wiki/SOLID_(informatique)">SOLID</a>, en partic. <a href="https://fr.wikipedia.org/wiki/Principe_de_responsabilit%C3%A9_unique">Principe de responsabilité unique</a></small>
 </aside>
+
+<!-- 
+
+responsabilité unique, même chose que la séparation des préoccupations?
+
+-->
